--- a/css/all.css
+++ b/css/all.css
@@ -1,287 +1,1 @@
-@charset "UTF-8";
-body {
-  background-color: #E9E8E4;
-  font-family: "Chocolate Classical Sans", sans-serif;
-}
-
-* {
-  position: relative;
-}
-
-.font-lxgw {
-  font-family: "LXGW WenKai Mono TC", monospace;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.text-justify {
-  text-align: justify;
-}
-
-.navbar {
-  background: transparent;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-}
-
-.page01 {
-  border-bottom: 1px solid #808080;
-}
-@media (min-width: 991px) {
-  .page01 .leftBox {
-    display: flex;
-    justify-content: center;
-    height: 90vh;
-    align-items: center;
-  }
-  .page01 .leftBox::before {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #808080;
-    position: absolute;
-    top: 15%;
-    right: 0;
-  }
-  .page01 .leftBox .titleBox {
-    font-size: 6rem;
-  }
-  .page01 .leftBox .titleBox span {
-    font-family: "Times New Roman", Times, serif;
-  }
-}
-@media (max-width: 991px) {
-  .page01 .leftBox {
-    padding-bottom: 15%;
-  }
-  .page01 .leftBox .Txt h1 {
-    opacity: 0;
-    position: absolute;
-  }
-  .page01 .leftBox .Txt h2 {
-    font-size: 1.1rem;
-  }
-  .page01 .leftBox .Txt p {
-    font-size: 0.8rem;
-    line-height: 1.8;
-  }
-}
-.page01 .rightBox {
-  display: flex;
-  padding: 0 10%;
-  text-align: center;
-}
-@media (min-width: 991px) {
-  .page01 .rightBox {
-    border-left: 1px solid #808080;
-  }
-  .page01 .rightBox::before {
-    content: "";
-    width: 100%;
-    height: 1px;
-    background-color: #808080;
-    position: absolute;
-    top: 5%;
-    right: 0;
-  }
-}
-@media (max-width: 991px) {
-  .page01 .rightBox {
-    padding-top: 20%;
-  }
-}
-
-.unitTitle {
-  gap: 20px;
-}
-.unitTitle span {
-  font-family: "Times New Roman", Times, serif;
-  -webkit-text-stroke: 1px black;
-  color: transparent;
-  font-size: 8rem;
-  font-weight: bolder;
-  line-height: 1;
-}
-@media (max-width: 991px) {
-  .unitTitle span {
-    font-size: 5.6rem;
-  }
-}
-.unitTitle b {
-  font-weight: bolder;
-  font-size: 2.8rem;
-}
-@media (max-width: 991px) {
-  .unitTitle b {
-    font-size: 2.1rem;
-  }
-}
-
-.card {
-  background-color: transparent;
-  background-color: rgba(255, 255, 255, 0.3);
-  border: none;
-}
-.card .card-body {
-  padding: 20% 20px;
-}
-@media (max-width: 991px) {
-  .card .card-body {
-    padding: 15% 15px;
-  }
-}
-.card .card-body .card-subtitle {
-  font-size: 1rem;
-}
-@media (max-width: 991px) {
-  .card .card-body .card-subtitle {
-    font-size: 0.8rem;
-  }
-}
-.card .card-body .card-text {
-  min-height: 100px;
-  text-align: justify;
-}
-@media (max-width: 991px) {
-  .card .card-body .card-text {
-    min-height: 125px;
-  }
-}
-.card .card-body .card-text::before {
-  content: "";
-  width: 30px;
-  height: 1px;
-  background: #808080;
-  display: block;
-  margin: 1rem auto;
-}
-
-.progress-list {
-  display: flex;
-  flex-wrap: wrap;
-  row-gap: 1rem;
-  -moz-column-gap: 2.5rem;
-       column-gap: 2.5rem;
-}
-.progress-list .progress-item {
-  width: 40%;
-  padding-left: 10rem;
-  margin-bottom: 1rem;
-}
-@media (max-width: 991px) {
-  .progress-list .progress-item {
-    width: 1000%;
-  }
-}
-.progress-list .progress-item .progress-title {
-  position: absolute;
-  left: 0;
-}
-.progress-list .progress-item .progress {
-  border: 1px solid #000;
-  background-color: transparent;
-}
-.progress-list .progress-item .progress .progress-bar {
-  background-color: #000;
-  border-radius: 0 10px 10px 0;
-}
-
-.page02,
-.page03 {
-  padding: 10% 0;
-  border-bottom: 1px solid #808080;
-}
-
-.innerImg {
-  padding-top: 59%;
-}
-.innerImg .image {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  background-position: center;
-}
-
-.page04 {
-  border-bottom: 1px solid #808080;
-}
-
-.case-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-bottom: 0;
-}
-.case-list .case-item {
-  padding: 40px 20px;
-  border-bottom: 1px solid #808080;
-  width: 33.3333333333%;
-}
-.case-list .case-item:nth-last-child(-n+3) {
-  border-bottom: none;
-}
-@media (min-width: 991px) {
-  .case-list .case-item + .case-item {
-    border-left: 1px solid #808080;
-  }
-  .case-list .case-item:nth-child(3n+1) {
-    border-left: none;
-  }
-}
-@media (max-width: 991px) {
-  .case-list .case-item {
-    width: 50%;
-    padding: 20px 10px;
-  }
-  .case-list .case-item .Txt h4 {
-    font-size: 1rem;
-  }
-  .case-list .case-item:nth-last-child(1) {
-    display: none;
-  }
-}
-.case-list .Txt {
-  padding: 10px 0;
-}
-
-.tag-group {
-  display: flex;
-}
-.tag-group li {
-  display: inline-block;
-  padding-right: 10px;
-  font-size: 0.9rem;
-  opacity: 0.6;
-}
-.tag-group li::before {
-  content: "＃";
-}
-@media (max-width: 991px) {
-  .tag-group li {
-    font-size: 0.7rem;
-  }
-}
-
-.btn-dark {
-  border-radius: 0;
-  background-color: #000;
-}
-
-.bg-dark {
-  background-color: #000 !important;
-}
-
-.contactPage {
-  padding-top: 10%;
-  padding-bottom: 3%;
-}
-@media (max-width: 991px) {
-  .contactPage {
-    text-align: center;
-    padding: 20% 0;
-  }
-}/*# sourceMappingURL=all.css.map */
+body{background-color:#e9e8e4;font-family:"Chocolate Classical Sans",sans-serif}*{position:relative}.font-lxgw{font-family:"LXGW WenKai Mono TC",monospace;font-weight:400;font-style:normal}.text-justify{text-align:justify}.navbar{background:rgba(0,0,0,0);position:absolute;top:0;left:0;width:100%}.page01{border-bottom:1px solid gray}@media(min-width: 991px){.page01 .leftBox{display:flex;justify-content:center;height:90vh;align-items:center}.page01 .leftBox::before{content:"";width:100%;height:1px;background-color:gray;position:absolute;top:15%;right:0}.page01 .leftBox .titleBox{font-size:6rem}.page01 .leftBox .titleBox span{font-family:"Times New Roman",Times,serif}}@media(max-width: 991px){.page01 .leftBox{padding-bottom:15%}.page01 .leftBox .Txt h1{opacity:0;position:absolute}.page01 .leftBox .Txt h2{font-size:1.1rem}.page01 .leftBox .Txt p{font-size:.8rem;line-height:1.8}}.page01 .rightBox{display:flex;padding:0 10%;text-align:center}@media(min-width: 991px){.page01 .rightBox{border-left:1px solid gray}.page01 .rightBox::before{content:"";width:100%;height:1px;background-color:gray;position:absolute;top:5%;right:0}}@media(max-width: 991px){.page01 .rightBox{padding-top:20%}}.unitTitle{gap:20px}.unitTitle span{font-family:"Times New Roman",Times,serif;-webkit-text-stroke:1px #000;color:rgba(0,0,0,0);font-size:8rem;font-weight:bolder;line-height:1}@media(max-width: 991px){.unitTitle span{font-size:5.6rem}}.unitTitle b{font-weight:bolder;font-size:2.8rem}@media(max-width: 991px){.unitTitle b{font-size:2.1rem}}.card{background-color:rgba(0,0,0,0);background-color:rgba(255,255,255,.3);border:none}.card .card-body{padding:20% 20px}@media(max-width: 991px){.card .card-body{padding:15% 15px}}.card .card-body .card-subtitle{font-size:1rem}@media(max-width: 991px){.card .card-body .card-subtitle{font-size:.8rem}}.card .card-body .card-text{min-height:100px;text-align:justify}@media(max-width: 991px){.card .card-body .card-text{min-height:125px}}.card .card-body .card-text::before{content:"";width:30px;height:1px;background:gray;display:block;margin:1rem auto}.progress-list{display:flex;flex-wrap:wrap;row-gap:1rem;-moz-column-gap:2.5rem;column-gap:2.5rem}.progress-list .progress-item{width:40%;padding-left:10rem;margin-bottom:1rem}@media(max-width: 991px){.progress-list .progress-item{width:1000%}}.progress-list .progress-item .progress-title{position:absolute;left:0}.progress-list .progress-item .progress{border:1px solid #000;background-color:rgba(0,0,0,0)}.progress-list .progress-item .progress .progress-bar{background-color:#000;border-radius:0 10px 10px 0}.page02,.page03{padding:10% 0;border-bottom:1px solid gray}.innerImg{padding-top:59%}.innerImg .image{position:absolute;top:0;left:0;width:100%;height:100%;background-size:cover;background-position:center}.page04{border-top:1px solid gray;border-bottom:1px solid gray}.case-list{display:flex;flex-wrap:wrap;margin-bottom:0}.case-list .case-item{padding:40px 20px;border-bottom:1px solid gray;width:33.3333333333%}.case-list .case-item:nth-last-child(-n+3){border-bottom:none}@media(min-width: 991px){.case-list .case-item+.case-item{border-left:1px solid gray}.case-list .case-item:nth-child(3n+1){border-left:none}}@media(max-width: 991px){.case-list .case-item{width:50%;padding:20px 10px}.case-list .case-item .Txt h4{font-size:1rem}.case-list .case-item:nth-last-child(1){display:none}}.case-list .Txt{padding:10px 0}.tag-group{display:flex}.tag-group li{display:inline-block;padding-right:10px;font-size:.9rem;opacity:.6}.tag-group li::before{content:"＃"}@media(max-width: 991px){.tag-group li{font-size:.7rem}}.btn-dark{border-radius:0;background-color:#000}.bg-dark{background-color:#000 !important}.contactPage{padding-top:10%;padding-bottom:3%}@media(max-width: 991px){.contactPage{text-align:center;padding:20% 0}}/*# sourceMappingURL=all.css.map */
