--- a/sass/all.scss
+++ b/sass/all.scss
@@ -222,12 +222,6 @@ body {
     }
 }
 
-.page04 {
-    border-top: 1px solid #808080;
-    border-bottom: 1px solid #808080;
-
-}
-
 .case-list {
     display: flex;
     flex-wrap: wrap;
@@ -238,9 +232,9 @@ body {
         border-bottom: 1px solid #808080;
         width: calc(100% / 3);
 
-        &:nth-last-child(-n+3) {
-            border-bottom: none;
-        }
+        // &:nth-last-child(-n+3) {
+        //     border-bottom: none;
+        // }
 
 
         @media (min-width:991px) {
@@ -265,9 +259,9 @@ body {
                 }
             }
 
-            &:nth-last-child(1) {
-                display: none;
-            }
+            // &:nth-last-child(1) {
+            //     display: none;
+            // }
 
         }
 
