--- a/sass/all.scss
+++ b/sass/all.scss
@@ -64,9 +64,9 @@ body {
                     position: absolute;
                 }
 
-                h2 {
-                    font-size: 1.1rem;
-                }
+                // h2 {
+                //     font-size: 1.1rem;
+                // }
 
                 p {
                     font-size: 0.8rem;
